@@ -323,7 +323,7 @@ if test "$GCC" = "yes" -a "$set_more_warnings" != "no"; then
 	-Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes \
 	-Wnested-externs -Wpointer-arith"
 
-	for option in -Wno-strict-aliasing -Wno-sign-compare; do
+	for option in -Wno-strict-aliasing -Wno-sign-compare -Wno-pointer-sign; do
 		SAVE_CFLAGS="$CFLAGS"
 		CFLAGS="$VFS_CFLAGS $option $CFLAGS"
 		AC_MSG_CHECKING([whether gcc understands $option])
